--- a/wishlist/react-ui/package.json
+++ b/wishlist/react-ui/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "^0.9.5"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "material-ui": "0.16.4",
     "moment": "^2.18.1",
     "react": "^15.3.0",
@@ -20,6 +21,7 @@
     "redux": "^3.5.2",
     "redux-form": "^6.6.1",
     "redux-logger": "^3.0.0",
+    "redux-promise": "^0.5.3",
     "redux-promise-middleware": "3.0.0",
     "redux-thunk": "^2.1.0",
     "superagent": "1.8.3",
