--- a/wishlist/wishlist.application/pom.xml
+++ b/wishlist/wishlist.application/pom.xml
@@ -25,6 +25,10 @@
 			<artifactId>wishlist.security</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>de.klingbeil.swaglist</groupId>
+			<artifactId>wishlist.api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
