--- a/wishlist/react-ui/package.json
+++ b/wishlist/react-ui/package.json
@@ -4,29 +4,22 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "devDependencies": {
-    "enzyme": "^2.8.0",
-    "react-addons-test-utils": "^15.3.0",
-    "react-scripts": "^0.9.5"
+    "babel-eslint": "^8.0.2",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
+    "react-scripts": "^1.0.17"
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "material-ui": "0.16.4",
-    "moment": "^2.18.1",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-modal": "^1.7.3",
-    "react-redux": "^5.0.3",
-    "react-router": "2.8.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.5.2",
-    "redux-form": "^6.6.1",
-    "redux-logger": "^3.0.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6 ",
+    "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
-    "redux-promise-middleware": "3.0.0",
-    "redux-thunk": "^2.1.0",
-    "superagent": "1.8.3",
-    "superagent-promise": "1.1.0",
-    "velocity-react": "^1.2.1"
+    "redux-promise-middleware": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
