--- a/wishlist/react-ui/.eslintrc.json
+++ b/wishlist/react-ui/.eslintrc.json
@@ -14,6 +14,7 @@
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/prop-types": 0
   }
 }
