--- a/wishlist/react-ui/package.json
+++ b/wishlist/react-ui/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "lodash": "^4.17.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6 ",
