added persistence by adding mongo database container

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,16 @@
 version: "3.1"
 
 services:
+  wishlistdb:
+    image: mongo:latest
+    volumes:
+    - wishlist_data:/data/db
+    ports:
+      - "27017:27017" 
+    networks:
+      - back-tier
+    
+
   wishlist:
     build:
        context: ./wishlist
@@ -12,7 +22,15 @@ services:
     networks:
       - front-tier
       - back-tier
+    depends_on:
+      - wishlistdb
+    environment:
+      SPRING_DATA_MONGODB_URI: mongodb://wishlistdb:27017/wishlistdb
     
 networks:
   front-tier:
   back-tier:
+
+volumes:
+  wishlist_data:
+    external: true
