--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,6 +1,15 @@
 version: "3.2"
 
 services:
+  wishlistdb:
+    image: mongo:latest
+    volumes:
+    - wishlist_data:/data/db
+    ports:
+      - "27017:27017" 
+    networks:
+      - back-tier
+
   reverse_proxy:
     image: swaglist/reverse_proxy
     ports:
@@ -16,6 +25,10 @@ services:
 
   wishlist:
     image: swaglist/wishlist
+    depends_on:
+      - wishlistdb
+    environment:
+      SPRING_DATA_MONGODB_URI: mongodb://wishlistdb:27017/wishlistdb
     networks:
       - front-tier
       - back-tier
@@ -55,4 +68,7 @@ secrets:
   revprox_key:
     external: true
   revprox_cert:
+    external: true
+volumes:
+  wishlist_data:
     external: true
