--- a/wishlist/pom.xml
+++ b/wishlist/pom.xml
@@ -6,12 +6,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<model.mapper.version>1.1.1</model.mapper.version>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
+		<version>1.5.9.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -30,6 +31,7 @@
 		<module>wishlist.security</module>
 		<module>wishlist.allTests</module>
 		<module>wishlist.api</module>
+		<module>wishlist.persistence</module>
 	</modules>
 
 	<dependencyManagement>
@@ -58,6 +60,16 @@
 				<groupId>de.klingbeil.swaglist</groupId>
 				<artifactId>wishlist.api</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>de.klingbeil.swaglist</groupId>
+				<artifactId>wishlist.persistence</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.modelmapper</groupId>
+				<artifactId>modelmapper</artifactId>
+				<version>${model.mapper.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
