--- a/wishlist/wishlist.application/pom.xml
+++ b/wishlist/wishlist.application/pom.xml
@@ -29,6 +29,10 @@
 			<artifactId>wishlist.api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>de.klingbeil.swaglist</groupId>
+			<artifactId>wishlist.persistence</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
