--- a/wishlist/wishlist.application/pom.xml
+++ b/wishlist/wishlist.application/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.broadbear</groupId>
+			<artifactId>link-preview</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -68,4 +78,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+    <repository>
+      <id>https://github.com/broadbear/maven-repo/raw/master</id>
+      <name>linkpreview</name>
+      <url>https://github.com/broadbear/maven-repo/raw/master</url>
+    </repository>
+   
+  </repositories>
 </project>
