--- a/wishlist/react-ui/package.json
+++ b/wishlist/react-ui/package.json
@@ -18,9 +18,12 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6 ",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
-    "redux-promise-middleware": "5.0.0"
+    "redux-promise-middleware": "5.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
