prepare for facebook login and firebase backend

--- a/wishlist-mobil/app.json
+++ b/wishlist-mobil/app.json
@@ -23,8 +23,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "de.klingbeil.swaglist"
     },
-    "entryPoint" : "./src/App.js"
+    "entryPoint": "./src/App.js",
+    "facebookScheme": "fb222807195303889",
+    "facebookAppId": "222807195303889",
+    "facebookDisplayName": "SwagList",
+    "android": {
+      "package": "de.klingbeil.swaglist"
+    }
   }
 }
