--- a/wishlist-mobil/package.json
+++ b/wishlist-mobil/package.json
@@ -7,9 +7,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^31.0.2",
+    "firebase": "^5.7.1",
+    "moment": "^2.23.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
+    "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-redux-listener": "^0.3.0",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-size-matters": "^0.1.4",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
