--- a/wishlist-mobil/app.json
+++ b/wishlist-mobil/app.json
@@ -10,9 +10,9 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
+    "icon": "./app/assets/icon.png",
     "splash": {
-      "image": "./src/assets/splash.png",
+      "image": "./app/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
