added quotes app example

--- a/wishlist-mobil/app.json
+++ b/wishlist-mobil/app.json
@@ -31,6 +31,7 @@
     "facebookDisplayName": "SwagList",
     "android": {
       "package": "de.klingbeil.swaglist"
-    }
+    },
+    "description": ""
   }
 }
