--- a/wishlist-mobil/package.json
+++ b/wishlist-mobil/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint": "^5.12.0",
     "expo": "^31.0.2",
     "firebase": "^5.7.1",
     "moment": "^2.23.0",
