--- a/wishlist-mobil/package.json
+++ b/wishlist-mobil/package.json
@@ -16,6 +16,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-link-preview": "^1.3.7",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-redux-listener": "^0.3.0",
     "react-native-router-flux": "^4.0.6",
