added all unittests module

--- a/wishlist/pom.xml
+++ b/wishlist/pom.xml
@@ -36,6 +36,7 @@
 		<module>wishes</module>
 		<module>crawler</module>
 		<module>wishes-query</module>
+		<module>wishlist-unittests</module>
 	</modules>
 
 
