--- a/wishlist-ui/package.json
+++ b/wishlist-ui/package.json
@@ -9,13 +9,17 @@
     "@types/node": "^12.6.2",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/redux-form": "^8.1.4",
+    "@types/redux-logger": "^3.0.7",
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-form": "^8.2.4",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.5.3"
   },
